# codex-state-health-tool

./: .gitignore  CREATE_PATCHED_DESKTOP_COPY.cmd  PATCH_PROVIDER_DISPLAY.cmd  README.md  RUN_SQLSwitchCodex.cmd  Repair-CodexStateHealth.bat  Repair-CodexStateHealth.ps1  SQLSwitchCodex.py  SQLSwitchCodex_GUIDE.md  UNPATCH_PROVIDER_DISPLAY.cmd  install_SQLSwitchCodex_menu.ps1  pyproject.toml
profiles/: profile.example.toml
scripts/: apply_project_restore.ps1  doctor.ps1  menu.ps1  one_click_rescue.ps1  plan_project_restore.ps1  plan_projection.ps1  publish_check.ps1
src/sqlswitchcodex_v21/: __init__.py  cli.py
